@@ -1,9 +1,16 @@
 package com.example.InternShip.service.impl;
 
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import com.example.InternShip.dto.response.PagedResponse;
 import com.example.InternShip.dto.supportRequest.request.UpdateSupportRequestRequest;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import com.example.InternShip.dto.cloudinary.response.FileResponse;
@@ -28,7 +35,6 @@ import lombok.extern.slf4j.Slf4j;
 @Slf4j
 public class SupportRequestServiceImpl implements SupportRequestService {
     private final SupportRequestRepository supportRequestRepository;
-
     private final CloudinaryService cloudinaryService;
     private final AuthService authService;
     private final ModelMapper modelMapper;
@@ -41,19 +47,14 @@ public class SupportRequestServiceImpl implements SupportRequestService {
         supportRequest.setIntern(user.getIntern());
         supportRequest.setTitle(request.getTitle());
         supportRequest.setDescription(request.getDescription());
+
         if (request.getEvidenceFile() != null) {
             FileResponse fileResponse = cloudinaryService.uploadFile(request.getEvidenceFile(), "Evidence");
             supportRequest.setEvidenceFile(fileResponse.getFileUrl());
         }
+
         supportRequestRepository.save(supportRequest);
-        GetSupportRequestResponse res = modelMapper.map(supportRequest, GetSupportRequestResponse.class);
-        res.setEvidenceFileUrl(supportRequest.getEvidenceFile());
-        res.setInternName(supportRequest.getIntern().getUser().getFullName());
-        res.setInternEmail(supportRequest.getIntern().getUser().getEmail());
-        if (supportRequest.getHandler() != null) {
-            res.setHandlerName(supportRequest.getHandler().getFullName());
-        }
-        return res;
+        return mapToResponse(supportRequest);
     }
 
     //Intern lấy danh sách của chính mình
@@ -61,16 +62,10 @@ public class SupportRequestServiceImpl implements SupportRequestService {
     public List<GetSupportRequestResponse> getMyList() {
         User user = authService.getUserLogin();
         List<SupportRequest> list = supportRequestRepository.findAllByInternId(user.getIntern().getId());
-        return list.stream().map(supportRequest -> {
-            GetSupportRequestResponse res = modelMapper.map(supportRequest, GetSupportRequestResponse.class);
-            res.setEvidenceFileUrl(supportRequest.getEvidenceFile());
-            res.setInternName(supportRequest.getIntern().getUser().getFullName());
-            res.setInternEmail(supportRequest.getIntern().getUser().getEmail());
-            if (supportRequest.getHandler() != null) {
-                res.setHandlerName(supportRequest.getHandler().getFullName());
-            }
-            return res;
-        }).toList();
+
+        return list.stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
     }
 
     //Intern sửa yêu cầu
@@ -88,25 +83,16 @@ public class SupportRequestServiceImpl implements SupportRequestService {
             throw new IllegalArgumentException("Chỉ được sửa khi yêu cầu chưa được xử lý");
         }
 
-        // Cập nhật thông tin
         if (request.getTitle() != null) req.setTitle(request.getTitle());
         if (request.getDescription() != null) req.setDescription(request.getDescription());
 
-        // Upload file mới nếu có
         if (request.getEvidenceFile() != null && !request.getEvidenceFile().isEmpty()) {
             FileResponse fileResponse = cloudinaryService.uploadFile(request.getEvidenceFile(), "Evidence");
             req.setEvidenceFile(fileResponse.getFileUrl());
         }
 
         supportRequestRepository.save(req);
-        GetSupportRequestResponse res = modelMapper.map(req, GetSupportRequestResponse.class);
-        res.setEvidenceFileUrl(req.getEvidenceFile());
-        res.setInternName(req.getIntern().getUser().getFullName());
-        res.setInternEmail(req.getIntern().getUser().getEmail());
-        if (req.getHandler() != null) {
-            res.setHandlerName(req.getHandler().getFullName());
-        }
-        return res;
+        return mapToResponse(req);
     }
 
     //Intern hủy yêu cầu
@@ -122,81 +108,90 @@ public class SupportRequestServiceImpl implements SupportRequestService {
 
     //HR lấy tất cả yêu cầu
     @Override
-    public List<GetSupportRequestResponse> getAllSupportRequest(String keyword, String status) {
-        Status statusEnum = status == null ? null : SupportRequest.Status.valueOf(status);
+    public PagedResponse<GetSupportRequestResponse> getAllSupportRequest(String keyword, String status, int page, int size) {
+        int pageNo = Math.max(0, page - 1);
 
-        List<SupportRequest> supportRequests = supportRequestRepository.searchSupportRequest(keyword, statusEnum);
-        return supportRequests.stream().map(supportRequest -> {
-            GetSupportRequestResponse res = modelMapper.map(supportRequest, GetSupportRequestResponse.class);
-            res.setEvidenceFileUrl(supportRequest.getEvidenceFile());
-            res.setInternName(supportRequest.getIntern().getUser().getFullName());
-            res.setInternEmail(supportRequest.getIntern().getUser().getEmail());
-            if (supportRequest.getHandler() != null) {
-                res.setHandlerName(supportRequest.getHandler().getFullName());
-            }
-            return res;
-        }).toList();
+        Pageable pageable = PageRequest.of(pageNo, size, Sort.by("createdAt").descending());
+
+        Status statusEnum = (status == null || status.isEmpty()) ? null : SupportRequest.Status.valueOf(status);
+
+        Page<SupportRequest> pageResult = supportRequestRepository.searchSupportRequest(keyword, statusEnum, pageable);
+
+        List<GetSupportRequestResponse> content = pageResult.getContent().stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return new PagedResponse<>(
+                content,
+                pageNo + 1,
+                pageResult.getTotalElements(),
+                pageResult.getTotalPages(),
+                pageResult.hasNext(),
+                pageResult.hasPrevious()
+        );
     }
 
     //HR duyệt yêu cầu
     @Override
     public GetSupportRequestResponse approveSupportRequest(Integer supportId) {
-        // K biết là có cần check hr đảm nhiệm k nx nhưng mà cứ để tạm như này :3
         SupportRequest supportRequest = supportRequestRepository.findById(supportId)
                 .orElseThrow(() -> new EntityNotFoundException(ErrorCode.SUPPORT_REQUEST_NOT_EXISTS.getMessage()));
-        // PENDING cũng duyệt được nên là làm như sau
+
         if (supportRequest.getStatus() == SupportRequest.Status.REJECTED) {
             throw new IllegalArgumentException(ErrorCode.SUPPORT_REQUEST_STATUS_INVALID.getMessage());
         }
+
         supportRequest.setStatus(SupportRequest.Status.RESOLVED);
+        supportRequest.setResolvedAt(LocalDateTime.now());
         supportRequestRepository.save(supportRequest);
-        GetSupportRequestResponse res = modelMapper.map(supportRequest, GetSupportRequestResponse.class);
-        res.setEvidenceFileUrl(supportRequest.getEvidenceFile());
-        res.setInternName(supportRequest.getIntern().getUser().getFullName());
-        res.setInternEmail(supportRequest.getIntern().getUser().getEmail());
-        if (supportRequest.getHandler() != null) {
-            res.setHandlerName(supportRequest.getHandler().getFullName());
-        }
-        return res;
+        return mapToResponse(supportRequest);
     }
 
-    //HR nhận yêu cầu hỗ trợ
+    //HR nhận yêu cầu
     @Override
     public GetSupportRequestResponse inProgressSupportRequest(Integer supportId) {
         SupportRequest supportRequest = supportRequestRepository.findById(supportId)
                 .orElseThrow(() -> new EntityNotFoundException(ErrorCode.SUPPORT_REQUEST_NOT_EXISTS.getMessage()));
+
         if (supportRequest.getStatus() == SupportRequest.Status.PENDING) {
             throw new IllegalArgumentException(ErrorCode.SUPPORT_REQUEST_STATUS_INVALID.getMessage());
         }
+
         supportRequest.setStatus(SupportRequest.Status.IN_PROGRESS);
         supportRequestRepository.save(supportRequest);
-        GetSupportRequestResponse res = modelMapper.map(supportRequest, GetSupportRequestResponse.class);
-        res.setEvidenceFileUrl(supportRequest.getEvidenceFile());
-        res.setInternName(supportRequest.getIntern().getUser().getFullName());
-        res.setInternEmail(supportRequest.getIntern().getUser().getEmail());
-        if (supportRequest.getHandler() != null) {
-            res.setHandlerName(supportRequest.getHandler().getFullName());
-        }
-        return res;
+        return mapToResponse(supportRequest);
     }
 
-    //HR từ chối hỗ trợ
+    //HR từ chối yêu cầu
     @Override
     public GetSupportRequestResponse rejectSupportRequest(Integer supportId, RejectSupportRequestRequest request) {
         SupportRequest supportRequest = supportRequestRepository.findById(supportId)
                 .orElseThrow(() -> new EntityNotFoundException(ErrorCode.SUPPORT_REQUEST_NOT_EXISTS.getMessage()));
+
         if (supportRequest.getStatus() == SupportRequest.Status.RESOLVED) {
             throw new IllegalArgumentException(ErrorCode.SUPPORT_REQUEST_STATUS_INVALID.getMessage());
         }
+
         supportRequest.setStatus(SupportRequest.Status.REJECTED);
         supportRequestRepository.save(supportRequest);
+        return mapToResponse(supportRequest);
+    }
+
+    private GetSupportRequestResponse mapToResponse(SupportRequest supportRequest) {
         GetSupportRequestResponse res = modelMapper.map(supportRequest, GetSupportRequestResponse.class);
+
         res.setEvidenceFileUrl(supportRequest.getEvidenceFile());
-        res.setInternName(supportRequest.getIntern().getUser().getFullName());
-        res.setInternEmail(supportRequest.getIntern().getUser().getEmail());
+
+        if (supportRequest.getIntern() != null && supportRequest.getIntern().getUser() != null) {
+            res.setInternName(supportRequest.getIntern().getUser().getFullName());
+            res.setInternEmail(supportRequest.getIntern().getUser().getEmail());
+        }
+
+        // Map thông tin Handler (HR xử lý)
         if (supportRequest.getHandler() != null) {
             res.setHandlerName(supportRequest.getHandler().getFullName());
         }
+
         return res;
     }
 }
